recyclerView_activity_switch

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.Qrscanner_"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".Menu_detail_Activity"
+            android:exported="true" />
+        <activity
             android:name=".SubActivity"
             android:exported="true" />
         <activity
